inner-circular-angle

--- a/src/pages/Border/InnerCircularAngle/index.less
+++ b/src/pages/Border/InnerCircularAngle/index.less
@@ -5,7 +5,6 @@
   background: tan;
   border-radius: .8em;
   padding: 1em;
-  box-shadow: 0 0 0 .4em #655;
-  outline: .6em solid #655;
+  box-shadow: 0 0 0 .4em rgb(196, 124, 124);
+  outline: .6em solid rgb(196, 124, 124);
 }
-
