--- a/src/global.less
+++ b/src/global.less
@@ -52,3 +52,9 @@ ol {
     min-height: 100vh;
   }
 }
+
+@font-face {
+  font-family: 'Curlz-Amp';
+  src: local('Curlz MT');
+  unicode-range: U+26;
+}
