--- a/src/global.less
+++ b/src/global.less
@@ -53,8 +53,9 @@ ol {
   }
 }
 
+//Self-Customized Fonts
 @font-face {
-  font-family: 'Curlz-Amp';
-  src: local('Curlz MT');
+  font-family: 'Amp';
+  src:url('/fonts/iconfont/Baskerville-Italic.ttf');
   unicode-range: U+26;
-}
+} //beautiful & character
