--- a/src/pages/Border/InnerCircularAngle/index.less
+++ b/src/pages/Border/InnerCircularAngle/index.less
@@ -1,15 +1,20 @@
 .target {
-  width: 30em;
-  height: 8em;
+  width: 10vw;
+  height: 10vh;
   margin: auto;
-  background: tan;
-  border-radius: .8em;
   padding: 1em;
-  box-shadow: 0 0 0 .4em rgb(196, 124, 124);
-  outline: .6em solid rgb(196, 124, 124);
+  background: tan;
+  border-radius: 0.8em;
+  outline: 0.6em solid rgb(196, 124, 124);
+  box-shadow: 0 0 0 0.4em rgb(196, 124, 124);
 }
 
 .keywords {
-  font-style: italic;  
-  font-family: 'Amp', sans-serif; 
+  font-family: 'Amp', sans-serif;
+  font-style: italic;
+}
+
+.highlighter {
+  width: 35vw;
+  margin: auto;
 }
