--- a/src/pages/Border/InnerCircularAngle/index.less
+++ b/src/pages/Border/InnerCircularAngle/index.less
@@ -1,3 +1,14 @@
+.figure1 {
+  width: 10vw;
+  height: 10vh;
+  margin: auto;
+  padding: 1em;
+  background: rgb(200, 144, 223);
+  border-radius: 0.8em;
+  outline: 0.6em solid rgb(22, 184, 206);
+  // box-shadow: 0 0 0 0.4em rgb(196, 124, 124);
+}
+
 .target {
   width: 10vw;
   height: 10vh;
