inner circular finished

--- a/src/pages/Border/InnerCircularAngle/index.less
+++ b/src/pages/Border/InnerCircularAngle/index.less
@@ -13,17 +13,22 @@
   height: 10vh;
   margin: auto;
   padding: 1em;
-  background: tan;
+  background: rgb(100, 181, 216);
   border-radius: 0.8em;
-  outline: 0.6em solid rgb(196, 124, 124);
-  box-shadow: 0 0 0 0.4em rgb(196, 124, 124);
+  outline: 0.6em solid rgb(216, 175, 239);
+  box-shadow: 0 0 0 0.4em rgb(216, 175, 239);
 }
 
 .keywords {
   font-family: 'Amp', sans-serif;
 }
 
-.highlighter {
-  width: 35vw;
+.highlighterHidden {
+  width: 30vw;
+  margin: auto;
+}
+
+.highlighterTarget {
+  width: 40vw;
   margin: auto;
 }
